--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "extraction-grid",
   "description": "A Polymer Element showing a grid of extractions.",
-  "version": "2.3.2",
+  "version": "2.3.3",
   "authors": ["Next Century Corporation"],
   "license": "Apache-2.0",
   "keywords": [
@@ -15,15 +15,13 @@
     "/test/"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.2",
-    "confidence-marker": "DigElements/confidence-marker#2.3.1",
-    "fontawesome-iconset": "https://github.com/vangware/fontawesome-iconset.git#09ac70f619bb44d73fefc5f9524ae29ab217ed15",
-    "icon-label": "DigElements/icon-label#2.1.8",
+    "polymer": "Polymer/polymer#2.5.0",
+    "confidence-marker": "DigElements/confidence-marker#2.3.2",
+    "icon-button": "DigElements/icon-button#2.0.1",
+    "icon-label": "DigElements/icon-label#2.2.0",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0",
-    "iron-icon": "PolymerElements/iron-icon#^2.0.0",
-    "iron-icons": "PolymerElements/iron-icons#^2.0.0",
     "paper-styles": "PolymerElements/paper-styles#^2.0.0",
-    "tag-extraction-buttons": "DigElements/tag-extraction-buttons#2.0.2"
+    "tag-extraction-buttons": "DigElements/tag-extraction-buttons#2.1.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^2.0.0",
