--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "extraction-grid",
   "description": "A Polymer Element showing a grid of extractions.",
-  "version": "2.3.9",
+  "version": "2.3.10",
   "authors": ["Next Century Corporation"],
   "license": "Apache-2.0",
   "keywords": ["web-component", "polymer"],
@@ -9,7 +9,7 @@
   "homepage": "https://github.com/usc-isi-digelements/extraction-grid/",
   "ignore": ["/.*", "/test/"],
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.5.0",
+    "polymer": "Polymer/polymer#2.5.0",
     "confidence-marker": "usc-isi-digelements/confidence-marker#^2.3.4",
     "icon-button": "usc-isi-digelements/icon-button#^2.0.2",
     "icon-label": "usc-isi-digelements/icon-label#^2.2.3",
